--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "react": "^18.2.0",
-    "react-test-renderer": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
@@ -30,6 +30,8 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.2.1",
+    "node-fetch": "^3.3.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   }
